feat: move swagger docs folder
